--- a/VendingMenu.html
+++ b/VendingMenu.html
@@ -5,7 +5,7 @@
 
 <body id="iylt">
   <div class="centered-buttons">
-    <a href="Payment.html"><button class="button" id="Payment">Payment</button></a>
+    <a href="index.html"><button class="button" id="Payment">Payment</button></a>
     <a href="touchscreen.html"><button class="button" id="Products">Products</button></a>
   </div>
   <a href="touchscreen.html"><button class="button right-button" id="Return"><</button></a>
