--- a/touchscreen.html
+++ b/touchscreen.html
@@ -40,7 +40,7 @@
             </div>
         </div>
         <footer>
-            <a href="Payment.html"><button id="buttons" style="margin-right: 15px">Quit</button></a>
+            <a href="index.html"><button id="buttons" style="margin-right: 15px">Quit</button></a>
             <a href="./confirm.html"><button id="buttons">Confirm</button></a>
             <a href="VendingMenu.html"><button id="menu">></button></a>
         </footer>
