--- a/index.html
+++ b/index.html
@@ -1,43 +1,14 @@
 <html>
 <head>
-	<style>
-		body {
-			margin: 0;
-			padding: 0;
-			overflow: hidden;
-			display: flex;
-			flex-direction: column;
-			justify-content: space-between;
-			align-items: center;
-			height: 100vh;
-		}
-		
-		img {
-			width: 70%;
-			height: 55%;
-			object-fit: contain;
-		}
-		
-		.button-container {
-			margin-top: -50px;
-			display: flex;
-			justify-content: center;
-		}
-
-		button {
-			padding: 20px 40px;
-			background-color: lightblue;
-			font-size: 44px;
-			cursor: pointer;
-		}
-	</style>
+  <meta cahrset="utf-8">
+  <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-	<a href="touchscreen.html">
-		<img src="Tap2Pay.jpg" alt="Full Page Image">
+	<a id="tap2pay" href="pages/touchscreen.html">
+		<img src="images/Tap2Pay-tpbg-white.png" alt="Full Page Image">
 	</a>
 	<div class="button-container">
-		<a href="PayCash.html"><button>Pay With Cash</button></a>
+		<a href="pages/PayCash.html"><button>Pay With Cash</button></a>
 	</div>
 </body>
 </html>
