Changed logos for products.

--- a/pages/touchscreen.html
+++ b/pages/touchscreen.html
@@ -11,37 +11,37 @@
     <div id="touchscreen">
         <div id="items">
             <div id="item" class="drink-item all-item" onclick="changeColor(this, 2.5)">
-                <img src="../images/coca-cola.jpg" class="images">
+                <img src="../images/coca-cola.png" class="images">
                 <div class="item_name"><p>Coca-Cola</p></div>
                 <div class="item_price"><label>$2.5</label></div>
             </div>
             <div id="item" class="drink-item all-item" onclick="changeColor(this, 2.0)">
-                <img src="../images/monster.jpg" class="images">
+                <img src="../images/monster.png" class="images">
                 <div class="item_name"><p>Monster Energy</p></div>
                 <div class="item_price"><label>$2.0</label></div>
             </div>
             <div id="item" class="drink-item all-item" onclick="changeColor(this, 2.0)">
-                <img src="../images/water.jpg" class="images">
+                <img src="../images/water.png" class="images">
                 <div class="item_name"><p>Dasani Water</p></div>
                 <div class="item_price"><label>$2.0</label></div>
             </div>
             <div id="item" class="snack-item all-item" onclick="changeColor(this, 3.0)">
-                <img src="../images/doritos.jpg" class="images">
+                <img src="../images/doritos.png" class="images">
                 <div class="item_name"><p>Doritos</p></div>
                 <div class="item_price"><label>$3.0</label></div>
             </div>
             <div id="item" class="snack-item all-item" onclick="changeColor(this, 2.5)">
-                <img src="../images/lays.jpg" class="images">
+                <img src="../images/lays.png" class="images">
                 <div class="item_name"><p>Lays</p></div>
                 <div class="item_price"><label>$2.5</label></div>
             </div>
             <div id="item" class="snack-item all-item" onclick="changeColor(this, 2.5)">
-                <img src="../images/snickers.jpg" class="images">
+                <img src="../images/snickers.png" class="images">
                 <div class="item_name"><p>Snickers Bar</p></div>
                 <div class="item_price"><label>$2.5</label></div>
             </div>
             <div id="item" class="snack-item all-item" onclick="changeColor(this, 2.0)">
-                <img src="../images/oreo.jpg" class="images">
+                <img src="../images/oreo.png" class="images">
                 <div class="item_name"><p>Oreo Chocolate</p></div>
                 <div class="item_price"><label>$2.0</label></div>
             </div>
