Modified style of confirm button and changed inactive color to gray.

--- a/pages/touchscreen.html
+++ b/pages/touchscreen.html
@@ -52,7 +52,7 @@
                 <label id="price_label">Total Price: $<span id="totalPrice">0.00</span></label>
             </div>
             <div id="confirm">
-                <a href="confirm.html"><button id="confButton">Confirm</button></a> 
+                <a id="confAnchor"><button id="confButton">Confirm</button></a> 
             </div>
             <div id="cancel">
                 <a id="cancelButton" href="../index.html"><img id="cancelOrder_img" src="../images/CancelButton.png"></a>
